k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:

  selector:
    app: todo-app
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 8000
